# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This API provides search functionality using DuckDuckGo.",
+        "description": "A lightweight, containerized REST API service that provides search functionality by proxying requests to DuckDuckGo.",
         "title": "DuckDuckGo Search API",
         "contact": {
             "name": "API Support",
@@ -9,12 +9,12 @@
             "email": "support@example.com"
         },
         "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "name": "WTFPL",
+            "url": "http://www.wtfpl.net/"
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "localhost:6060",
     "basePath": "/",
     "paths": {
         "/search": {
@@ -39,6 +39,12 @@
                         "name": "q",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "false",
+                        "name": "scrap",
+                        "in": "query"
                     },
                     {
                         "type": "integer",
@@ -91,6 +97,9 @@
         "handler.SearchResultResponse": {
             "type": "object",
             "properties": {
+                "content": {
+                    "type": "string"
+                },
                 "snippet": {
                     "type": "string"
                 },
